--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "core-js": "^3.8.3",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -20,7 +22,9 @@
     "autoprefixer": "^9.8.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
     "postcss": "^7.0.39",
+    "sass-loader": "^12.6.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue-template-compiler": "^2.6.14"
   },
